# simd-sample

./: CMakeLists.txt  fir.cpp  inner.cpp  main.cpp  simd.hpp  timer.hpp
